// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders as expected when passing a small size 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--default lab-btn--small"
    >
       
      test
    </button>
  </div>
</body>
`;

exports[`Button renders as expected when passing a wallet icon 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--default lab-btn--normal"
    >
      <span
        class="lab-icon lab-icon--wallet lab-icon--white lab-icon--petit lab-btn__icon"
      />
       
      test
    </button>
  </div>
</body>
`;

exports[`Button renders as expected when passing a warning skin 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--default lab-btn--normal lab-btn--warning"
    >
       
      test
    </button>
  </div>
</body>
`;

exports[`Button renders as expected when passing disabled as true 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--default lab-btn--normal"
      disabled=""
    >
       
      test
    </button>
  </div>
</body>
`;

exports[`Button renders with base props 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--default lab-btn--normal"
    >
       
      test
    </button>
  </div>
</body>
`;
